--- a/models/maze10x10/model.config
+++ b/models/maze10x10/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>maze</name>
+    <name>maze10x10</name>
     <version>1.0</version>
     <sdf version="1.7">model.sdf</sdf>
     <author>
